<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.nbucedog.godpaw.MainActivity">
    <LinearLayout
        android:layout_height="200pt"
        android:layout_width="fill_parent"
        android:orientation="vertical">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1,2,3">
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/God"
                    style="@style/txview" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <CheckBox
                    style="@style/CkboxStyle"
                    android:text="@string/jinyan"
                    android:id="@+id/CkJinyan"/>
                <CheckBox
                    style="@style/CkboxStyle"
                    android:text="@string/xiujian"
                    android:id="@+id/CkXiujian"/>
                <CheckBox
                    style="@style/CkboxStyle"
                    android:text="@string/qianxing"
                    android:id="@+id/CkQianxing"/>
                <CheckBox
                    style="@style/CkboxStyle"
                    android:text="@string/shouwei"
                    android:id="@+id/CkShouwei"/>
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <CheckBox
                    style="@style/CkboxStyle"
                    android:text="@string/yexiong"
                    android:id="@+id/CkYexiong"/>
                <CheckBox
                    style="@style/CkboxStyle"
                    android:text="@string/nvwu"
                    android:id="@+id/CkNvwu"/>
                <CheckBox
                    style="@style/CkboxStyle"
                    android:text="@string/yuyan"
                    android:id="@+id/CkYuyan"/>
                <CheckBox
                    style="@style/CkboxStyle"
                    android:text="@string/lieren"
                    android:id="@+id/CkLieren"/>
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <CheckBox
                    style="@style/CkboxStyle"
                    android:text="@string/baichi"
                    android:id="@+id/CkBaichi"/>
                <CheckBox
                    style="@style/CkboxStyle"
                    android:text="@string/zhanglao"
                    android:id="@+id/CkZhanglao"/>
                <CheckBox
                    style="@style/CkboxStyle"
                    android:text="@string/qiubi"
                    android:id="@+id/CkQiubi"/>
            </TableRow>
        </TableLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1,2,3">
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/people"
                    style="@style/txview"/>
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <CheckBox
                    style="@style/CkboxStyle"
                    android:text="@string/cunmin"
                    android:id="@+id/CkCunmin1"/>
                <CheckBox
                    style="@style/CkboxStyle"
                    android:text="@string/cunmin"
                    android:id="@+id/CkCunmin2"/>
                <CheckBox
                    style="@style/CkboxStyle"
                    android:text="@string/cunmin"
                    android:id="@+id/CkCunmin3"/>
                <CheckBox
                    style="@style/CkboxStyle"
                    android:text="@string/cunmin"
                    android:id="@+id/CkCunmin4"/>
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <CheckBox
                    style="@style/CkboxStyle"
                    android:text="@string/cunmin"
                    android:id="@+id/CkCunmin5"/>
                <CheckBox
                    style="@style/CkboxStyle"
                    android:text="@string/cunmin"
                    android:id="@+id/CkCunmin6"/>
                <CheckBox
                    style="@style/CkboxStyle"
                    android:text="@string/cunmin"
                    android:id="@+id/CkCunmin7"/>
                <CheckBox
                    style="@style/CkboxStyle"
                    android:text="@string/cunmin"
                    android:id="@+id/CkCunmin8"/>
            </TableRow>
        </TableLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1,2,3">
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/wolf"
                    style="@style/txview"/>
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <CheckBox
                    style="@style/CkboxStyle"
                    android:text="@string/langren"
                    android:id="@+id/CkLangren1"/>
                <CheckBox
                    style="@style/CkboxStyle"
                    android:text="@string/langren"
                    android:id="@+id/CkLangren2"/>
                <CheckBox
                    style="@style/CkboxStyle"
                    android:text="@string/langren"
                    android:id="@+id/CkLangren3"/>
                <CheckBox
                    style="@style/CkboxStyle"
                    android:text="@string/langren"
                    android:id="@+id/CkLangren4"/>
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <CheckBox
                    style="@style/CkboxStyle"
                    android:text="@string/langren"
                    android:id="@+id/CkLangren5"/>
                <CheckBox
                    style="@style/CkboxStyle"
                    android:text="@string/langren"
                    android:id="@+id/CkLangren6"/>
                <CheckBox
                    style="@style/CkboxStyle"
                    android:text="@string/langren"
                    android:id="@+id/CkLangren7"/>
                <CheckBox
                    style="@style/CkboxStyle"
                    android:text="@string/langren"
                    android:id="@+id/CkLangren8"/>
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <CheckBox
                    style="@style/CkboxStyle"
                    android:text="@string/daozei"
                    android:id="@+id/CkDaozei"/>
                <CheckBox
                    style="@style/CkboxStyle"
                    android:text="@string/yehai"
                    android:id="@+id/CkYehai"/>
                <CheckBox
                    style="@style/CkboxStyle"
                    android:text="@string/bailang"
                    android:id="@+id/CkBailang"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="宁大通信狗"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BeginDeel"
        android:textSize="15pt"
        android:id="@+id/DeelBegin"
        android:background="@drawable/shape"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StopDeel"
        android:textSize="15pt"
        android:id="@+id/DeelStop"
        android:background="@drawable/shape"
        android:textColor="#FFFFFF"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
</android.support.constraint.ConstraintLayout>
